--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@
 .titulo{
     font-family: "Inter", sans-serif;
     text-shadow: 0rem .1875rem .3125rem #2424247e;
-    background-image: url(/assets/img/wallpapers/1299437.jpg);
+    background-image: url(../assets/img/wallpapers/1299437.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
